# axler

./: Cargo.toml  README.md
axler-common/: Cargo.toml
axler-common/src/: indexing.rs
axler-cpu/: Cargo.toml
axler-cpu/src/: lib.rs  renderer.rs
axler-cuda/: Cargo.toml  build.rs
axler-cuda/src/: async_ops.rs  lib.rs  renderer.rs
axler-cuda/src/ffi/: error.rs  mod.rs  nvrtc.rs  raw.rs
axler-tensor/: Cargo.toml
axler-tensor/benches/: compare_perf.py  compare_perf_cuda.py  tensor_ops.rs  vs_candle.rs
axler-tensor/src/: async_realize.rs  lib.rs  parallel.rs  realize.rs  tests.rs
axler-traits/: Cargo.toml
axler-traits/src/: lib.rs
axler-uop/: Cargo.toml
axler-uop/src/: lib.rs
