[package]
name = "axler-cpu"
version = "0.1.0"
edition = "2021"

[dependencies]
axler-uop = { path = "../axler-uop" }
axler-traits = { path = "../axler-traits" }
axler-common = { path = "../axler-common" }
libloading = "0.8"
dirs = "5.0"
once_cell = "1.19"
parking_lot = "0.12"
rustc-hash = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 1
