[package]
name = "axler-cuda"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
libc = "0.2"
once_cell = "1.20"
rustc-hash = "2.0"
axler-uop = { path = "../axler-uop" }
axler-traits = { path = "../axler-traits" }
axler-common = { path = "../axler-common" }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 1