[package]
name = "axler-tensor"
version = "0.1.0"
edition = "2021"

[dependencies]
axler-uop = {path = "../axler-uop"}
axler-cpu = {path = "../axler-cpu"}
axler-traits = {path = "../axler-traits"}
axler-cuda = {path = "../axler-cuda"}
rayon = "1.7"
rand = "0.9.2"
futures = "0.3"
pprof = { version = "0.13", features = ["flamegraph"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
candle-core = {git = "https://github.com/huggingface/candle.git", features = ["cuda"]}

[features]
default = []
profiling = ["pprof"]

[[bench]]
name = "tensor_ops"
harness = false

[[bench]]
name = "vs_candle"
harness = false